--- a/BirdHouse/Gemfile
+++ b/BirdHouse/Gemfile
@@ -30,9 +30,9 @@ gem 'rack-cors'
 
 gem 'mechanize'
 gem 'pry'
-gem 'byebug'
 gem 'faker'
 gem 'active_model_serializers', '~> 0.10.0'
+gem 'dotenv-rails'
 
 
 group :development, :test do
@@ -50,3 +50,5 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+gem "jwt", "~> 2.2"
